# python-docs-zh-tw

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  TRANSLATORS  about.html  about.po  bugs.html  bugs.po  contents.html  contents.po  copyright.html  copyright.po  download.html  from_cn.sh  genindex-.html  genindex-A.html  genindex-B.html  genindex-C.html  genindex-D.html  genindex-E.html  genindex-F.html  genindex-G.html  genindex-H.html  genindex-I.html  genindex-J.html  genindex-K.html  genindex-L.html  genindex-M.html  genindex-N.html  genindex-O.html  genindex-P.html  genindex-Q.html  genindex-R.html  genindex-S.html  genindex-T.html  genindex-U.html  genindex-V.html  (+38 more)
.scripts/: README.md  chatgpt_translate.sh  from_cn.sh  google_translate.sh  mark_file.sh  pyproject.toml  requirements.txt  summarize_progress.sh
.scripts/google_translate/: chatgpt.py  main.py  utils.py
.scripts/mark_file/: main.py
.scripts/summarize_progress/: main.py
.scripts/utils/: install_poetry.sh
.tx/: config
_static/: classic.css  documentation_options.js  glossary.json  menu.js  opensearch.xml  pydoctheme.css  pydoctheme_dark.css  pygments_dark.css
c-api/: abstract.html  abstract.po  allocation.html  allocation.po  apiabiversion.html  apiabiversion.po  arg.html  arg.po  bool.html  bool.po  buffer.html  buffer.po  bytearray.html  bytearray.po  bytes.html  bytes.po  call.html  call.po  capsule.html  capsule.po  cell.html  cell.po  code.html  code.po  codec.html  codec.po  complex.html  complex.po  concrete.html  concrete.po  contextvars.html  (+105 more)
(+272 files in other folders)
