[tool.poetry]
name = "pydoc-zhtw-scripts"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polib = "1.1.1"
googletrans = "3.1.0a0"
translate-toolkit = "3.8.1"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
